# fit-analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  AI_INSTRUCTIONS.md  EXERCISE_MAPPINGS.md  Makefile  Makefile.old  PROJECT_STRUCTURE.md  QUICKREF.txt  QUICKSTART.md  README.md  TESTING.md  analyze.py  generate_exercise_mapping.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sync.py
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-auto-merge.yml  release.yml
archive/: fit_to_summary.py  garmin_sync.py  setup_credentials.py
examples/: analyze_fit.py
scripts/: profile_performance.py
src/fitanalyzer/: __init__.py  constants.py  credentials.py  exceptions.py  fitparse_fix.py  metrics.py  parser.py  strength.py  sync.py
tests/: conftest.py  test_api_exercise_names.py  test_credentials.py  test_exceptions.py  test_fitparse_fix.py  test_integration.py  test_integration_old.py.bak  test_metrics.py  test_parser.py  test_scalability.py  test_strength_summary_generation.py  test_strength_summary_generation.py.bak  test_strength_training.py  test_strength_training.py.bak  test_sync.py
tests/fixtures/: 20474406937_ACTIVITY.fit  20548472357_ACTIVITY.fit  20555050352_ACTIVITY.fit  20744294788_ACTIVITY.fit  20747700969_ACTIVITY.fit  20748058539_ACTIVITY.fit  README.md
